201x-xx-xx - release 1.0.0
        - Bugfix: use valid default date if RTC is not detected
        - formatting for D71/D81/DNP images

2011-12-18 - release 0.10.2
        - Bugfix: End of generated raw directory was incorrect
        - Bugfix: Various compilation fixes when fastloaders are disabled
        - ULoad M3 automatically exits when ATN becomes active
        - Minor code space improvements
        - New fastloader: ELoad Version 1 (EasyProg)

2010-12-25 - release 0.10.1
        - Bugfix: Remove remains of previous commands while parsing B-*
        - Bugfix: Fix response of UI command for unknown suffix chars
        - small improvement of JiffyDOS transfer speeds

2010-11-07 - release 0.10.0
        - Deprecation notice:
          E-R and E-W commands will be removed in the next release
        - Improved reliability of Nippon loader

2010-10-31 - release 0.10.0pre5
        - Bugfix: Avoid duplicate file name when DEL/DIR matches
        - Bugfix: Reduce chance of data corruption in Wheels
        - Bugfix: Slightly relax IEC timing while waiting for command
        - Added AR6 1581 fastloader+saver (PAL)

2010-10-26 - release 0.10.0pre4
        - Bugfix: Wheels with SuperCPU timing issue corrected
        - Bugfix: Rare problem with ~ in FAT file names fixed
        - Added compile-time option to capture fastloader code
        - Added Wheels 4.4 fast loaders
        - Added another variation of the Epyx Fastload cart
        - Added Nippon fast loader

2010-10-16 - release 0.10.0pre3
        - Bugfix: Wheels 128 loader detection fixed
        - Added a second Epyx Fastload variation

2010-10-15 - release 0.10.0pre2
        - Bugfix: G-P answer fixed
        - Bugfix: Strip 0x0d from file names when appropiate
        - Wheels support

2010-08-06 - release 0.10.0pre1
        - GEOS 2.0 support (d64/d71/d81 images only)
        - File-based M-R emulation
        - Removed "oldnkc" configuration

2010-08-02 - release 0.9.3