@@ -1,6 +1,7 @@
 201x-xx-xx - release 1.0.0
         - Bugfix: use valid default date if RTC is not detected
         - formatting for D71/D81/DNP images
+        - DolphinDOS parallel speeder support
 
 2011-12-18 - release 0.10.2
         - Bugfix: End of generated raw directory was incorrect
